# ToonJson

./: .gitignore  README.md
python/: README.md  pyproject.toml
python/src/toonjson/: __init__.py  converter.py
python/tests/: test_converter.py
python/tests/data/: sample1.json  sample1.toon
web/: README.md  about.html  index.html  script.js  style.css
